--- a/src/app/learn/components/learn-view/learn-view.component.html
+++ b/src/app/learn/components/learn-view/learn-view.component.html
@@ -1,146 +1,29 @@
 <div class="contenedor">
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
+    <header id="headerCurso1" class="header-mods">
+        <h1 class="modh1">Curso 1</h1>
+        <span class="modspan">En este curso aprenderas acerca de que es una metodologia agil y las mas relevantes dentro de ella</span>
+    </header>
+    <div class="parent2">        
+        <button id="initialSun" class="sun" [disabled]="!disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="!disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
     </div>
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
+</div>
+<div class="contenedor">
+    <header id="headerCurso2" class="header-mods">
+        <h1 class="modh1">Curso 2</h1>
+        <span class="modspan">En este curso tus habilidades y conocimientos de scrum aumentaran considerablemente</span>
+    </header>
+    <div class="parent2">        
+        <button id="initialSun2" class="sun" [disabled]="!disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="!disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
+        <button class="sun" [disabled]="disabled"><i class="fa-solid fa-book mod-icon" [ariaDisabled]="disabled"></i></button>
     </div>
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
-    </div>
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
-    </div>
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
-    </div>
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
-    </div>
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
-    </div>
-    <div class="card" style="margin-top: 24px;">
-        <div class="row g-0 ">
-            <div class="col-md-4">
-                <img src="../../../../assets/male_young_hair_style_sunglasses_party.png" alt="">
-            </div>
-            <div class="col-md-6 width-media align-self-center">
-                <h5 class="card-title">UserName</h5>
-                <div class="card-subtitle">Puntuacion: 50</div>
-                <div class="card-subtitle">Puesto en tabla: 3</div>
-            </div>
-        </div>
-        <!-- <img src="../../../../assets/logoFNTSV5.png" class="card-img-top" alt="..."> -->
-        <div class="card-body hidden">
-            <div class="d-grid gap-2">
-                <a href="#" class="btn btn-outline-primary">Ver ranking de scrummies</a>
-            </div>
-        </div>
-    </div>
+    
 </div>
