--- a/src/app/shared/components/achievements/achievements.component.html
+++ b/src/app/shared/components/achievements/achievements.component.html
@@ -1,4 +1,4 @@
-<ul class="list-group list-group-flush">
+<ul class="list-group mod list-group-flush">
     <li class="list-group-item">
         Logro1
     </li>
