--- a/src/app/ranking/components/ranking-view/ranking-view.component.html
+++ b/src/app/ranking/components/ranking-view/ranking-view.component.html
@@ -1,32 +1,45 @@
-<div *ngIf="!cargando" class="alert alert-info text-center mt-3">
+<div *ngIf="!cargando" class="alert center alert-info text-center">
     <h4 class="alert-heading">Cargando Data</h4>
     <p>
         <i class="fa fa-sync-alt fa-spin fa-2x"></i>
     </p>
 </div>
 
-<div *ngIf="cargando" class="contenedor">
+<div *ngIf="cargando" class="mod">
     <table class="table">
         <thead>
-            <tr class="table-secondary">
-                <th id="cellImg" scope="col">Posición</th>
-                <th scope="col">UserName</th>
-                <th scope="col">Puntos</th>
-                <th scope="col">Avatar</th>
+            <tr>
+                <th>Posicion</th>
+                <th>UserName</th>
+                <th>Puntos</th>
+                <th>Avatar</th>
             </tr>
         </thead>
-        <tbody class="table-group-divider">
-            <tr *ngFor="let item of listaDeUsuarios; let i = index" class="table-secondary">
+        <tbody>
+            <tr *ngFor="let item of listaDeUsuarios; let i = index">
                 <th id="cellImg">{{i+1}}</th>
                 <td id="cellImg">{{item['userName']}}</td>
                 <td id="cellImg">{{item['puntuacion']}}</td>
-                <td id="cellImg"><img src="{{item['urlPic']}}" alt=""></td>
-                <!-- <td>{{}}</td> -->
+                <td id="cellImg"><img class="img-resize" src="{{item['urlPic']}}" alt=""></td>
             </tr>
         </tbody>
     </table>
-    <div class="d-flex row">
-        <div class="col align-start"><button class="btn btn-outline-primary" type="submit">Get Puntos</button></div>
-        <div class="col align-end"><button class="btn btn-outline-primary">Sumar Puntos</button></div>
-    </div>
 </div>
+<!-- <table bordercolor="red" height="10px" class="mod-table">
+    <thead>
+        <tr>
+            <th id="cellImg" scope="col">Posición</th>
+            <th scope="col">UserName</th>
+            <th scope="col">Puntos</th>
+            <th scope="col">Avatar</th>
+        </tr>
+    </thead>
+    <tbody class="">
+        <tr *ngFor="let item of listaDeUsuarios; let i = index" class="table-secondary">
+            <th id="cellImg">{{i+1}}</th>
+            <td id="cellImg">{{item['userName']}}</td>
+            <td id="cellImg">{{item['puntuacion']}}</td>
+            <td id="cellImg"><img class="img-resize" src="{{item['urlPic']}}" alt=""></td>
+        </tr>
+    </tbody>
+</table> -->
